# fastapi-achievements

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 487d0454cddb_init.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: achievement.py  user.py
app/core/: config.py
app/db/: base.py  session.py  utils.py
app/enums/: languages.py
app/models/: achievement.py  user.py
app/schemas/: achievement_schemas.py  user_schemas.py
app/services/: achievement.py  user.py
scripts/: create_revision.sh  entry-point.sh  start-dev.sh
tests/: conftest.py
tests/integration/: test_create_user.py
